<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView 
        android:layout_width="@dimen/qr_image_width"
        android:layout_height="@dimen/qr_image_height"
        android:layout_marginTop="@dimen/qr_image_margin"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/qr_code_dialog"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_describe"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/qr_attention"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/qr_method_one"
        android:textColor="@color/qr_method"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/qr_method_one_describe_first"
        android:textColor="@color/qr_describe"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_describe"
        android:text="@string/qr_method_one_describe_second"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/qr_method_two"
        android:textColor="@color/qr_method"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_describe"
        android:text="@string/qr_method_two_describe"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_method"
        android:text="@string/qr_method_three"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_describe"
        android:text="@string/qr_method_three_describe_first"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_describe"
        android:text="@string/qr_method_three_describe_second"
        android:textSize="@dimen/normal_text_size"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/qr_describe"
        android:text="@string/qr_method_three_describe_third"
        android:textSize="@dimen/normal_text_size"
        />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    
    <TextView
        android:id="@+id/qr_save" 
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:text="@string/qr_btm_text"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/qr_describe"
        android:background="@drawable/qr_btm_bg"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/button_text_size"/>
    </RelativeLayout>

</LinearLayout>