<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context="com.boway.sale.PhoneNumberCheckActivity" >

    <TextView
        android:id="@+id/check_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/check_phone_number_title"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/check_sim1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_title"
        android:layout_marginTop="@dimen/qr_image_height"
        android:text="@string/check_sim_1"
        android:textSize="@dimen/normal_text_size" />

    <EditText
        android:id="@+id/check_input_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/qr_image_height"
        android:layout_toEndOf="@+id/check_sim1"
        android:hint="@string/check_hint_no_sim"
        android:inputType="none"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/check_sim2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_sim1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/check_sim_2"
        android:textSize="@dimen/normal_text_size" />

    <EditText
        android:id="@+id/check_input_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_sim1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/check_sim2"
        android:hint="@string/check_hint_no_sim"
        android:inputType="none"
        android:textSize="@dimen/normal_text_size" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_sim2"
        android:layout_marginTop="@dimen/boway_sale_logo_height"
        android:gravity="center"
        android:text="@string/check_button"
        android:textSize="@dimen/button_text_size" />

</RelativeLayout>