<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/check_self"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="11dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_phone_number_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/relative_1"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:elevation="2dp" >

        <TextView
            android:id="@+id/tag"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/check_sim_1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:id="@+id/vline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tag"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/check_input_1"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/vline"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/check_hint_no_sim"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/relative_2"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:elevation="2dp" >

        <TextView
            android:id="@+id/tag1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/check_sim_2"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:id="@+id/vline1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tag1"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/check_input_2"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/vline1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/check_hint_no_sim"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="doCheck"
        android:text="@string/check_button"
        android:textSize="24sp" />
    
     <RelativeLayout
        android:id="@+id/check_checking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/check_checking"
            android:gravity="center"
            android:paddingTop="80dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/button_text_size" />
    </RelativeLayout>

</RelativeLayout>