<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sale_mode_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/first_service" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wechat_text_color"
                android:textSize="16sp"
                android:text="@string/wechat_text"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:orientation="vertical" >

        <ImageView
            android:id="@+id/qr_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/qr_code_service" />
        
        </LinearLayout>
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/sale_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/second_service" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/browser_text_color"
                android:textSize="16sp"
                android:text="@string/browser_text"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:orientation="vertical" >
            
            <TextView 
                android:clickable="false"
                android:id="@+id/boway_browser_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boway_address_title"
                android:textColor="@drawable/seletct_browser_text_color"
                android:textSize="22sp"/>
            
            <TextView 
                android:clickable="false"
                android:id="@+id/browser_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boway_address_path"
                android:textColor="@drawable/seletct_browser_text_color"
                android:textSize="14sp"/>

        </LinearLayout>
        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/sale_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/third_service" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/artificial_text_color"
                android:textSize="16sp"
                android:text="@string/artificial_text"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:orientation="vertical" >
            
            <Button 
                android:id="@+id/boway_phone_btn"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:gravity="center_vertical"
                android:text="@string/boway_phone_number"
                android:textColor="@color/sale_text_color"
                android:background="@drawable/boway_phone_bg"
                android:textSize="18sp"/>
            
            <TextView 
                android:id="@+id/boway_qq_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boway_qq_number"
                android:layout_marginTop="8dp"
                android:textColor="@drawable/select_artificial_text_color"
                android:textSize="18sp"/>

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>